# ros2_ws

./: .gitignore
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: my_first_node.cpp  px4_ros2_gps_subscriber.cpp  px4_ros2_joystick_manual_control.cpp  px4_ros2_manual_control.cpp  px4_ros2_offboard_attitude.cpp  px4_ros2_offboard_example.cpp  px4_ros2_read_attitude.cpp  px4_ros2_read_manual_control_switches.cpp  px4_ros2_subscriber_example.cpp  robot_news_station.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: joystick.py  my_first_node.py  publish_joystick_continously.py  robot_news_station.py  smartphone.py
src/secured_cloud_drone_pkg/: CMakeLists.txt  package.xml
src/secured_cloud_drone_pkg/secured_cloud_drone_pkg/: cloud_commander.py  cloud_informer.py
src/secured_cloud_drone_pkg/src/: px4_ros2_commander.cpp  px4_ros2_informer.cpp
