<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>secured_cloud_drone_pkg</name>
  <version>0.0.1</version>
  <description>Demo of a secured cloud connected drone </description>
  <maintainer email="kahilyhashim10@gmail.com">hashim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>
  <depend>px4_ros_com</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
